<resources>
    <string name="app_name">QRgen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_new_article_page">Add New Article</string>
    <string name="add_new_article_price">Price</string>
    <string name="dodaj_novi_artikal_page">Dodaj novi artikal</string>
    <string name="add_new_placeholder_name">   Article name   </string>
    <string name="dodaj_novi_artikal_ime">   Ime artikla   </string>
    <string name="add_new_placeholder_amount">   Amount   </string>
    <string name="dodaj_novi_placeholder_kolicina">   Kolicina   </string>
    <string name="add_new_placeholder_color">   Color   </string>
    <string name="dodaj_novi_placeholder_boja">   Boja   </string>
</resources>